selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.out
Error at %FILE_NAME%:1:35
Type mismatch
  |  val a = if true { Some([]) } else None
                                       ^
Expected: <unknown>[]?
but instead found: <unknown>?
